hphp/hack/test/typecheck/typed_locals/refine-error.php.exp
File "refine-error.php", line 7, characters 5-11:
Typing error (Typing[4110])
  File "refine-error.php", line 5, characters 11-13:
  Expected `int`
  File "refine-error.php", line 7, characters 10-11:
  But got `string`
